--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,24 @@
 {% block contents %}
 
 <div style="display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            min-height: 100vh;">
-    <form action="/swagger-ui"
-    <p> Access to the API docs. </p>
-    <button type="submit" class="btn btn-primary"> API Docs </button>
-</form>
+justify-content: center;
+align-items: center;
+text-align: center;
+min-height: 100vh;" >
+    <div class="container">
+    <form action="/swagger-ui">
+        <p> Access to the API docs. </p>
+        <button type="submit" class="btn btn-primary"> API Docs </button>
+    </form>
 </div>
+<div class="container">
+    <form action="https://twitter.com/vanquisher3498">
+        <p> Contact me ? </p>
+        <button type="submit" class="btn btn-primary"> Contact </button>
+    </form>
+</div>
+</div>
+
+
 
 {% endblock %}
